syntax = "proto2";
option java_package = "com.rwproto";
option java_outer_classname = "MagicSecretProto";

package magicSecret;

enum msRequestType{
	GET_MS_RANK = 1; //获取法宝秘境排行榜
	ENTER_MS_FIGHT = 2; //进入战斗
	GET_MS_SINGLE_REWARD = 3; //获取单关奖励
	GET_MS_SWEEP_REWARD = 4; //获取扫荡奖励
	EXCHANGE_BUFF = 5; //换取buff
	OPEN_REWARD_BOX = 6; //打开宝箱
}

enum msResultType {
	SUCCESS = 1; //成功
	TIMES_NOT_ENOUGH = 2; //挑战次数不足
	LOW_LEVEL = 3; //等级不足
	CONDITION_UNREACH = 4; //前提条件未达到
	NO_REWARD_CAN_GET = 5; //没有可以领取的奖励
	NO_REWARD_BOX = 6; //没有可以领取的宝箱
	NOT_ENOUGH_GOLD = 7; //金钱不足
	NOT_ENOUGH_STAR = 8; //没有足够的星星
	DATA_ERROR = 9; //数据异常
}

message MagicSecretReqMsg{
	required msRequestType reqType = 1; //请求功能协议类型
	optional string dungeonId = 2; //请求进入的副本
	optional string chapterId = 3; //请求扫荡的章节
	optional string buffId = 4;  //请求兑换的buff
	optional msRewardBox rwdBox = 5;  //请求打开的箱子及数量
}

message MagicSecretRspMsg{
	required msRequestType reqType = 1;//回应的功能协议类型
	required msResultType rstType = 2;//是否成功处理
	optional string msRankData = 3;//排行榜的数据
}

message msRewardBox{
	required string boxID = 1;	//箱子id
	required int32 boxCount = 2;	//箱子数量
}

